test/libyul/yulSyntaxTests/builtin_identifier_4.yul
{
	function f(add) {}
}
// ----
// ParserError 5568: (14-17='add'): Cannot use builtin function name "add" as identifier name.
